# jazzcomp

./: .gitignore  README.md  STRUCTURE.md  app.py  bass.py  bass_algorithm.md  comping.py  course_work.docx  course_work.md  drum_sounds.py  drums.py  form.html  harmony.py  input.txt  main.py  notes_with_octaves.py  pyproject.toml  sound_combiner.py  table.md  test_bass_line.xml  test_notes_with_octaves.py
